<resources>
    <string name="app_name">MusicalDelight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_songs">Songs</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_settings">Sign Out</string>
    <string name="menu_user">Settings</string>

</resources>
