<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_songs" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_albums" />

    </group>

    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_user" />
        </menu>
    </item>

</menu>
